--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html{scroll-behavior:smooth}
 body{
   color:var(--muted);
   background-color:#0b0b0b;
-  background-image: url('/Gallery/backgrounds/bg.jpg'), url('/Gallery/backgrounds/Infinity-Castle-main.webp');
+  background-image: url('/Gallery/backgrounds/bg.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
